--- a/css/base.scss
+++ b/css/base.scss
@@ -1,21 +1,50 @@
 @import "_posts.scss";
-
+@font-face{font-family: "Adam"; src: url('../fonts/ADAM_PRO.woff') format("woff")};
+@font-face{font-family: "Igra"; src: url('../fonts/IgraSans.woff') format("woff")};
+@font-face{font-family: "ButlerLight"; src: url('../fonts/Butler-Bold.woff') format("woff")};
 html,
 body {
 	margin: 0;
 	padding: 0;
 }
 
-nav {
+.navbar {
   background-color: #cf1d35;
 	display: flex;
 	font-size: 20px;
 	justify-content: space-around;
+	align-items:center;
 	padding: 10px;
+	font-family: "Igra";
+	font-weight:bold;
+	letter-spacing:2px;
+	padding:0px;
+	height:40px;
 }
 
-nav a {
+h1 {
+	font-family: "Igra";
+	font-weight:900;
+}
+
+h2 {
+	font-family: "ButlerLight";
+	font-weight:bold;
+	letter-spacing:2px;
+}
+
+.navLink {
+	flex:1;
 	color: white;
+	height:100%;
+	line-height:40px;
+	text-align:center;
+	text-decoration:none;
+	transition: .2s background;
+	&:hover {
+		background:rgba(0,0,0,.1);
+		transition: .2s background;
+	}
 }
 
 .contact_container,
