Add post, add syntax highlighting.

--- a/src/static/css/_posts.scss
+++ b/src/static/css/_posts.scss
@@ -11,7 +11,7 @@
 
 .post p {
 	text-indent: 10px;
-	font-family: "Ariel";
+	font-family: sans-serif, "Ariel";
 	font-size:18px;
 	font-weight:500;
 	line-height:30px;
