--- a/src/static/css/base.scss
+++ b/src/static/css/base.scss
@@ -1,5 +1,6 @@
 @import "_posts.scss";
 @import "_post.scss";
+@import "_dark.scss";
 @font-face{font-family: "Igra"; src: url('../fonts/IgraSans.woff') format('woff')};
 @font-face{font-family: "ButlerBold"; src: url('../fonts/Butler-Bold.woff') format("woff")};
 html,
