--- a/src/static/css/_post.scss
+++ b/src/static/css/_post.scss
@@ -1,6 +1,19 @@
 .postPageContainer {
   margin: 10px auto;
-  
+  max-width: 1100px;
+  @media(max-width:1400px){
+    max-width:1100px;
+    width:100%;
+    min-width:250px;
+  }
+}
+
+.postHeader {
+  text-align:center;
+  img {
+    width:100%;
+    max-width:500px;
+  }
 }
 
 code {
