--- a/src/static/css/_posts.scss
+++ b/src/static/css/_posts.scss
@@ -1,7 +1,6 @@
 .post {
-	position:relative;
-	box-sizing: border-box;
-	background-color: #FFFAFF;
+  background:white;
+  position:relative;
 	flex: 1 0 50%;
 	max-width: 800px;
 	width: 50%;
@@ -9,24 +8,119 @@
 	min-height:400px;
 	margin: 10px;
 	padding: 10px;
-	border-radius:4px;
-	box-shadow:5px 5px 6px rgba(0,0,0,.2), inset 0px 0px 20px rgba(0,0,0,.2);
-	border: 1px solid lighten(#212A34,10%);
-	border-top: 5px solid #212A34;
+  box-sizing:border-box;
+  box-shadow:inset -4px -4px 7px rgba(100,100,100,.2), 1px 2px 0px rgba(0,0,0,.4), -3px -3px 15px rgba(100,100,100,.2);
+  z-index:10;
+  overflow:hidden;
+  .header {
+    position:relative;
+    margin-top:70px;
+    text-shadow:0px 0px 1px white;
+    z-index:2;
+  }
+  p {
+    font-size:20px;
+    line-height:40px;
+    padding:0px 10px 10px 10px;
+    margin:0;
+  }
+  .postHeader {
+    text-align:center;
+
+  }
+  .mainImage {
+    max-width:300px;
+    opacity:.2;
+    position:absolute;
+    top:50px;
+    z-index:1;
+		right:10px;
+  }
+  .seperator {
+    width:30%;
+    margin:10px;
+    margin-top:30px;
+    height:1px;
+    border:none;
+    background:black;
+  }
+
 }
 
-.post p {
-	text-indent: 10px;
-	font-family: sans-serif, "Ariel";
-	font-size:18px;
-	font-weight:500;
-	line-height:30px;
-	margin: 40px 0px;
+.postBody {
+  margin:40px 0px 60px 0px;
+  position:relative;
+  z-index:2;
+  background:rgba(255,255,255,.4);
 }
 
-.mainImage {
-	float:top;
-	img {
-		width:150px;
-	}
+.baseBtn {
+  background:lighten(#3B2C35,10%);
+  position:absolute;
+  bottom:20px;
+  color:white;
+  cursor:pointer;
+  border:1px solid white;
+  outline:1px solid lighten(#3B2C35,10%);
+  padding:5px;
+  font-family:sans-serif;
+  font-size:12px;
+  transition:all .3s linear;
+  &:hover {
+    background: lighten(#3B2C35,15%);
+    box-shadow:inset 0px 5px 20px rgba(0,0,0,.2), 1px 1px 3px rgba(0,0,0,.2);
+    outline-offset:-3px;
+    outline:1px solid white;
+    transition:all .3s linear;
+  }
+}
+.days_ago {
+  position:absolute;
+  border:1px solid white;
+  background:red;
+  color:white;
+  top:20px;
+  outline:1px solid red;
+  display:inline-block;
+  font-size:8px;
+
+  padding:5px;
+  opacity:.8;
+  > h2 {
+    margin:0;
+		font-family:sans-serif;
+		text-shadow:none;
+  }
+}
+
+.date {
+  position:absolute;
+  top:20px;
+  padding:5px;
+  font-style:italic;
+  font-size:12px;
+  line-height:18px;
+  left:90px;
+}
+
+.tags {
+  position:absolute;
+  bottom:15px;
+  padding:5px;
+  right:10px;
+  display:flex;
+  justify-content:space-between;
+  .tag {
+    background:red;
+    margin:2px;
+    padding:5px;
+    font-size:10px;
+    color:white;
+    font-family:sans-serif;
+    opacity:.7;
+    &:hover {
+      opacity:1;
+      cursor:pointer;
+    }
+  }
 }
