--- a/src/static/css/_post.scss
+++ b/src/static/css/_post.scss
@@ -16,6 +16,13 @@
   }
 }
 
+.video {
+  width:100%;
+  height:500px;
+  display:flex;
+  justify-content:center;
+}
+
 code {
   font-size:15px;
 }
