--- a/src/static/css/_tags.scss
+++ b/src/static/css/_tags.scss
@@ -16,7 +16,7 @@
 .tags {
 	display:flex;
 	flex-flow:row wrap;
-	justify-content:space-between;
+	//justify-content:space-between;
 	margin-bottom:10px;
 }
 
