--- a/src/static/css/base.scss
+++ b/src/static/css/base.scss
@@ -91,7 +91,8 @@ h2 {
 .posts_container,
 .about_container,
 .tags_container,
-.tag_container{
+.tag_container,
+.container_404 {
 	align-items: center;
 	display: flex;
 	flex-flow: column wrap;
