--- a/src/static/css/_post.scss
+++ b/src/static/css/_post.scss
@@ -1,4 +1,4 @@
-.postPageContainer,.commentForm {
+.postPageContainer,.commentForm, .comments{
   margin: 10px auto;
   max-width: 1100px;
   @media(max-width:1400px){
@@ -7,16 +7,45 @@
     min-width:250px;
   }
 }
-.contactForm {
+.commentForm {
   position:relative;
-  z-index:10;
-  background:red;
+  z-index:12;
+  background:white;
+  padding:5px;
+  box-sizing:border-box;
+  height:400px;
+  font-size:15px;
+  .textArea {
+    width:100%;
+    height:150px;
+    border-radius:5px;
+    
+    padding:5px;
+    margin:5px;
+    box-sizing:border-box;
+  }
+  .textInput {
+    width:100%;
+    height:40px;
+    border-radius:5px;
+  }
+}
+.comment {
+  width:100%;
+  background:white;
+  border:1px solid black;
+  padding:10px;
+  margin:5px;
+  .commentName {
+    font-size:18px;
+    font-weight:bold;
+  }
 }
 .comments {
   position:relative;
   z-index:12;
-  width:100%;
-  height:400px;
+  padding:20px;
+  box-sizing:border-box;
 }
 .postHeader {
   text-align:center;
