--- a/src/static/css/_posts.scss
+++ b/src/static/css/_posts.scss
@@ -22,7 +22,7 @@
     font-size:20px;
     line-height:40px;
     padding:0px 10px 10px 10px;
-    margin:0;
+    margin:10px 0px;
   }
   .postHeader {
     text-align:center;
