--- a/src/static/css/_posts.scss
+++ b/src/static/css/_posts.scss
@@ -86,15 +86,11 @@
   top:20px;
   outline:1px solid red;
   display:inline-block;
-  font-size:8px;
-
+  font-size:12px;
+  font-weight:bold;
   padding:5px;
   opacity:.8;
-  > h2 {
-    margin:0;
-		font-family:sans-serif;
-		text-shadow:none;
-  }
+  font-family:sans-serif;
 }
 
 .date {
