--- a/src/static/css/base.scss
+++ b/src/static/css/base.scss
@@ -1,6 +1,6 @@
 @import "_posts.scss";
 @import "_post.scss";
-@import "_dark.scss";
+@import "_prism.scss";
 @import "_tags.scss";
 @font-face{font-family: "Igra"; src: url('../fonts/IgraSans.woff') format('woff')};
 @font-face{font-family: "UbuntuMono"; src: url('../fonts/UbuntuMono-R.ttf') format('truetype')}
