--- a/src/static/css/_post.scss
+++ b/src/static/css/_post.scss
@@ -1,4 +1,7 @@
-.postPageContainer,.commentForm, .comments{
+.postPageContainer,
+.commentForm,
+.contactForm,
+.comments {
   margin: 10px auto;
   max-width: 1100px;
   @media(max-width:1400px){
@@ -37,14 +40,16 @@
   border-radius:5px 0px 0px 0px;
   padding:0px 5px;
 }
-
-.commentForm {
+.commentFrom {
+  height:400px;
+}
+.commentForm, .contactForm {
   position:relative;
   z-index:10;
   background:white;
   padding:20px;
   box-sizing:border-box;
-  height:400px;
+  
   font-size:15px;
   overflow:hidden;
   font-family: sans-serif;
