Fix date issue, add post

--- a/src/static/css/_prism.scss
+++ b/src/static/css/_prism.scss
@@ -53,6 +53,8 @@ pre[class*="language-"] {
 .token.doctype,
 .token.cdata {
 	color: slategray;
+	background:transparent;
+	border:none;
 }
 
 .token.punctuation {
