--- a/src/static/css/_tags.scss
+++ b/src/static/css/_tags.scss
@@ -4,6 +4,7 @@
 	padding:5px;
 	font-size:10px;
 	text-shadow:1px 1px black;
+	font-weight:800;
 	color:white;
 	font-family:sans-serif;
   text-decoration: none;
