--- a/src/static/css/base.scss
+++ b/src/static/css/base.scss
@@ -3,6 +3,7 @@
 @import "_post.scss";
 @import "_prism.scss";
 @import "_tags.scss";
+@import "_codemirror.scss";
 @font-face{font-family: "Igra"; src: url('../fonts/IgraSans.woff') format('woff')};
 @font-face{font-family: "UbuntuMono"; src: url('../fonts/UbuntuMono-R.ttf') format('truetype')}
 html, body {
