--- a/src/static/css/_post.scss
+++ b/src/static/css/_post.scss
@@ -216,3 +216,12 @@ code {
     border:1px solid white;
   }
 }
+
+.youtubeContainer {
+  width:100%;
+  height:auto;
+  display:flex;
+  flex-flow: row wrap;
+  justify-content:center;
+  align-items:center;
+}
