--- a/src/static/css/_tags.scss
+++ b/src/static/css/_tags.scss
@@ -6,6 +6,8 @@
 	text-shadow:1px 1px black;
 	font-weight:800;
 	color:white;
+	position:relative;
+	z-index:10;
 	font-family:sans-serif;
   text-decoration: none;
   transition:.3s background;
