--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,8 +9,17 @@
 		<title>WebsiteDevTips</title>
 	</head>
 	<body>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<div class="loader" style="display:flex;flex-flow:column wrap;justify-content:center;align-items:center;top:0;left:0;color:white;position:absolute;width:100%;height:100%;background:#0f111f;">
+			WebsiteDevTips is Loading
+			<img src="./rolling.gif" style="max-height:50px;"/>
+		</div>
+		<script type="text/javascript">
+			$(window).load(function() {
+				$(".loader").fadeOut("slow");
+			})
+		</script>
 		<div id="container" class="container"><%- markup -%></div>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" async></script>
 		<script src="/js/bundle.js" type="text/javascript" async></script>
 		<!-- Sitemap Generator -->
 		<script type="text/javascript">
